Software class corrections

--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -263,7 +263,7 @@ li.preprint {
 
 li.software {   
  /*--   background:#87edc0; --*/
-    background:#c5eada;
+    background:#dce8e3;
 }
 
 li.paper:hover{
