Software class corrections

--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -262,8 +262,9 @@ li.preprint {
 }
 
 li.software {   
- /*--   background:#87edc0; --*/
-    background:#dce8e3;
+ /*--   background:#87edc0; 
+    background:#dce8e3; --*/
+    background:#E1E1CD;
 }
 
 li.paper:hover{
