Software type modified

--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -264,7 +264,7 @@ li.preprint {
 li.software {   
  /*--   background:#87edc0; 
     background:#dce8e3; --*/
- /*   background:#E1E1CD;*/
+    background:#E1E1CD;
 }
 
 li.paper:hover{
