--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -267,8 +267,11 @@ li.software {
     background:#E1E1CD;
 }
 
-li.software img.centeredimage {
-    vertical-align: middle;
+li.software img.catimage {
+    vertical-align: -26px;
+    height: 50px;
+    margin-right: -16px;
+    margin-top: -1px;
 }
 
 li.paper:hover{
