--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -21,6 +21,10 @@ li.paper span.ou {
     font-weight: bold;
     font-size:11pt;
 }
+.titresoftware {
+    font-weight: bold;
+    font-size:11pt;
+}
 .auteurthese {
     font-weight: bold;
     font-size:16pt;
