--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -199,6 +199,9 @@ div.monmenu dd
 { margin-bottom:15px; margin-top:5px;padding-bottom:5px; padding-top:5px;
  }
 
+.bidule:hover {
+    background: #00FFFF;
+}
 /*------------------------------*/
 
 #TemporaryWindow{ position:fixed; right: 10px; top:10px; 
